--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
     
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Laika01.jpg" width="576" alt= "Terrier Blanco">
-        <h1> ¡Gracias por elegir!  la aerolineas mas colmilluda <br>
+        <h1> ¡Gracias por elegir! <br>
         <br>
         <strong>Coco <em>airlines.</em></strong></h1>
         
