--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <h4 id="q"> <p class= "conoce"> Conoce más paginas web de<em> <strong> Coco </strong> como...</em> 
 <br>
 <br>
-<a href=""> <em> Aprende a cocinar con Coco. </em> </a>
+<a href="cocina_coco.html"> <em> Aprende a cocinar con Coco. </em> </a>
 <br>
 <br>
 <br>
